--- a/frontend/src/normalize.css
+++ b/frontend/src/normalize.css
@@ -22,6 +22,8 @@
   
   body {
     margin: 0;
+    background-image: url("hexagon.jpg");
+    background-size: 100%;
   }
   
   /**
@@ -38,7 +40,9 @@
    */
   
   h1 {
+    font-family: 'Open Sans';
     font-size: 2em;
+    font-variant: small-caps;
     margin: 0.67em 0;
   }
   
@@ -160,12 +164,32 @@
   button,
   input,
   optgroup,
-  select,
+  select {
+    font-family:'Times New Roman', Times, serif;
+    font-size: 100%;
+    line-height: 1.15;
+    margin: 0;
+  }
   textarea {
-    font-family: inherit; /* 1 */
+    font-family: 'Courier New', monospace, sans-serif;
     font-size: 100%; /* 1 */
     line-height: 1.15; /* 1 */
     margin: 0; /* 2 */
+    color: rgb(5, 170, 5);
+    background-color:rgb(0, 0, 0);
+    border: 3px solid darkgray;
+    resize: none;
+  }
+
+  footer {
+    font-family:'Times New Roman', Times, serif;
+    font-size: 80%;
+    font-style: italic;
+    line-height: 1;
+    position: fixed;
+    bottom: 100px;
+    left: 30%;
+    right: 30%;
   }
   
   /**
